--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "lottie-react": "^2.4.1",
-    "next": "14.2.5",
+    "next": "^14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
